tests/snapshots/cli__follow@mixed_style_blueprint_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/mixed_style.flake.nix"
    - "--diff"
    - follow
    - blueprint.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -13,6 +13,7 @@

     blueprint = {
       url = "github:numtide/blueprint";
+      inputs.nixpkgs.follows = "nixpkgs";
     };

     mprisd = {

----- stderr -----
