tests/snapshots/cli__follow@mixed_style_mprisd_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/mixed_style.flake.nix"
    - "--diff"
    - follow
    - mprisd.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -17,6 +17,7 @@

     mprisd = {
       url = "git+https://forge.kenji.rsvp/kenji/mprisd";
+      inputs.nixpkgs.follows = "nixpkgs";
     };
   };


----- stderr -----
