tests/snapshots/cli__follow@multi_hop_cycle.snap
---
source: tests/cli.rs
assertion_line: 522
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/multi_hop_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/multi_hop_cycle.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
