tests/snapshots/cli__follow@stale_follows_invalid_parent.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/stale_follows_invalid_parent.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/stale_follows_invalid_parent.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,8 +2,7 @@
   inputs = {
     treefmt-nix.url = "github:numtide/treefmt-nix";
     nixpkgs.url = "github:nixos/nixpkgs?ref=nixos-unstable";
-    nixpkgs.inputs.treefmt-nix.follows = "treefmt-nix";
   };

-  outputs = { self, nixpkgs , treefmt-nix }: { };
+  outputs = { self , treefmt-nix }: { };
 }

----- stderr -----
warning: stale follows at line 4, column 19: nixpkgs.treefmt-nix -> treefmt-nix (source no longer present in flake.lock)
